--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tabler/icons-react": "^3.34.0",
     "clsx": "^2.1.1",
+    "lightningcss": "^1.30.1",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.6",
     "next": "15.3.5",
